--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -29,3 +29,8 @@ framework:
                 adapter: cache.app
             doctrine.system_cache_pool:
                 adapter: cache.system
+
+parameters:
+    env(DATABASE_URL): 'mysql://root:@db:3306/todolist'
+    database_user: root
+    database_password: 111111
