--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,8 @@ APP_SECRET=f064975a2ebe7fe2eebf22928b50b300
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL = "mysql://root:111111@127.0.0.1:3306/todolist"
+DATABASE_URL = mysql://root:111111@db:3306/todolist
 ###DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name"
 
 ###< doctrine/doctrine-bundle ###
+###https://github.com/eko/docker-symfony/issues/83
