--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,9 +1,12 @@
 parameters:
+    database_user: root
+    database_password: 111111
     # Adds a fallback DATABASE_URL if the env var is not set.
     # This allows you to run cache:warmup even if your
     # environment variables are not available yet.
     # You should not need to change this value.
-    env(DATABASE_URL):
+
+    env(DATABASE_URL): 'mysql://root:@db:3306/my_database'
 
 doctrine:
     dbal:
